--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html id='body' lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -18,7 +18,7 @@
 
 <body>
 
-  <header class="main-navigation">
+  <header id="main-nav" class="main-navigation">
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
