added a form, styled it, and added more events

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
         <div id="islandSignUp" class="btn">Sign Me Up!</div>
       </div>
     </section>
+
+    <section class="content-pick">
+
+      <div class="destinationForm">
+        <h4>Sign Up For Alerts!</h4>
+        <form class="signup-form" action="/action_page.php">
+          <label for="">First name:</label>
+          <input class="first-name" type="text" name="firstname" value="">
+          <label for="">Last name:</label>
+          <input type="text" name="lastname" value="">
+          <label for="">Email:</label>
+          <input class="email" type="email" name="email" value=""><br>
+          <label for="">Phone:</label>
+          <input class="phone" type="tel" name="tel" value=""><br>
+          <button id='submitButton' class='btn' role='submit'>Submit</button>
+    </section>
+    
   </div><!-- container -->
 
   <footer class="footer">
