--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <div class="destinationForm">
         <h4>Sign Up For Alerts!</h4>
-        <form class="signup-form" action="/action_page.php">
+        <form id='signup-form' class="signup-form" action="/action_page.php">
           <label for="">First name:</label>
           <input class="first-name" type="text" name="firstname" value="">
           <label for="">Last name:</label>
@@ -94,6 +94,8 @@
           <input class="email" type="email" name="email" value=""><br>
           <label for="">Phone:</label>
           <input class="phone" type="tel" name="tel" value=""><br>
+          <label id='textAreaLabel' for="">Any comments? Character count: 0</label>
+          <textarea id='textArea1'></textarea><br>
           <button id='submitButton' class='btn' role='submit'>Submit</button>
     </section>
     
