--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="destinationForm">
         <h4>Sign Up For Alerts!</h4>
         <form id='signup-form' class="signup-form" action="/action_page.php">
-          <label for="">First name:</label>
-          <input class="first-name" type="text" name="firstname" value="">
+          <label id='fnl' for="">First name:</label>
+          <input id='fni' class="first-name" type="text" name="firstname" value="">
           <label for="">Last name:</label>
           <input type="text" name="lastname" value="">
           <label for="">Email:</label>
@@ -97,6 +97,7 @@
           <label id='textAreaLabel' for="">Any comments? Character count: 0</label>
           <textarea id='textArea1'></textarea><br>
           <button id='submitButton' class='btn' role='submit'>Submit</button>
+        </form>
     </section>
     
   </div><!-- container -->
